<resources>
    <string name="app_name">Koin Example</string>
    <string name="no_internet">No internet</string>
    <string name="tab_to_refresh">Tab to refresh</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_watch">Watch</string>
    <string name="nav_search">Search</string>
    <string name="empty_list">Empty list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_empty_username_pw">Please enter your username and password.</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">OK</string>


    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_msg_time_out">Can\'t connect to the server</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="email">Email</string>
</resources>